[tool.poetry]
name = "grzegorz-tomsia"
version = "3.0.0"
description = ""
authors = ["Grzegorz Tomsia <grzegorz.tomsia@capgemini.com>"]
readme = "README.md"
packages = [{include = "grzegorz_tomsia"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.82.0"}
pydantic = "^1.10.1"
SQLAlchemy = "^1.4.41"
psycopg2 = "^2.9.3"
sqlmodel = "^0.0.8"
fastapi-redis-cache = "^0.2.5"
aio-pika = "^8.2.2"
pika = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pylint = "^2.15.0"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
